# MacOS-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  excel_agent.xlsx  index.html  ladygaga.docx  main.py  mkdocs.yml  ppt_agent.pptx  pylintrc  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml  taylorswift_intro.docx  temp.txt  word_agent.docx
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-docs.yml  secret-scanning.yml
configs/: agent_config.yaml  config_example.yaml  llm.yaml
docs/: _config.yml  index.en.md  index.md  index.zh.md
examples/: broswer_calendar_test.py  preview_calendar_test.py  smol_broswer_calendar_test.py  smol_browser_excel.py  smol_browser_ppt_finder.py  smol_browser_textedit_ppt_finder_test.py  smol_browser_wechat.py  smol_finder_wechat.py  smol_textedit_finder_test.py  smol_trump_case.py  smol_word.py  test_calendar.py  test_copy.py  test_excel.py  test_finder.py  test_ppt.py  test_pyautogui.py  test_textedit.py  test_wechat.py  test_word.py
examples/tasks/: task1.json  task2.json  task3.json  task4.json  task5.json  task6.json  task7.json  task8.json
macosagent/: __main__.py  appagent_box.py  cli.py  macosagent.py  prompt.yaml
macosagent/agents/: __init__.py
macosagent/agents/browser_agent/: __init__.py  browser.py
macosagent/agents/calendar_agent/: __init__.py
macosagent/agents/calendar_agent/agent/: __init__.py  prompt.py  service.py  views.py
macosagent/agents/calendar_agent/calendar/: __init__.py  calendar.py  context.py  utils.py
macosagent/agents/calendar_agent/controller/: __init__.py  service.py  views.py
macosagent/agents/excel_agent/: __init__.py  excelagent.py
macosagent/agents/excel_agent/agent/: __init__.py  llm.py  prompt.py  service.py  views.py
macosagent/agents/excel_agent/controller/: __init__.py  action_utils.py  generate_figure.py  generate_figure1.py  service.py  test.xlsx  test_new.xlsx  views.py
macosagent/agents/excel_agent/excel/: __init__.py  context.py  excel.py  utils.py
macosagent/agents/finder_agent/: __init__.py  environment.yaml
macosagent/agents/finder_agent/configs/: config.yaml
macosagent/agents/finder_agent/finder_agent/: finder.py  prompt.py  prompt.yaml  utils.py
macosagent/agents/finder_agent/tests/: testfinder.py
macosagent/agents/player_agent/: __init__.py
macosagent/agents/player_agent/agent/: __init__.py  llm.py  prompt.py  service.py  views.py
macosagent/agents/player_agent/controller/: __init__.py  service.py  views.py
macosagent/agents/player_agent/player/: __init__.py  context.py  player.py  utils.py
macosagent/agents/powerpoint_agent/: __init__.py  powerpointagent.py
macosagent/agents/powerpoint_agent/agent/: llm.py  prompt.py  service.py  views.py
macosagent/agents/powerpoint_agent/controller/: __init__.py  action_utils.py  get_layout.py  service.py  views.py
macosagent/agents/powerpoint_agent/powerpoint/: __init__.py  context.py  powerpoint.py  utils.py
macosagent/agents/preview_agent/: __init__.py
macosagent/agents/textedit_agent/: __init__.py  environment.yaml
macosagent/agents/textedit_agent/save/: b.txt
macosagent/agents/wechat_agent/: __init__.py
macosagent/agents/word_agent/: __init__.py
macosagent/llm/: __init__.py  llm.py  tracing.py
tests/: test_langfuse.py
zh/: index.html
(+96 files in other folders)
