[project]
name = "macos-agent"
version = "0.1.0"
description = "MacOS Agent is a collection of agents that can be used to automate tasks on a MacOS system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-agent",
    "calendar-agent",
    "excel-agent",
    "finder-agent",
    "langfuse>=2.60.3",
    "openai>=1.66.5",
    "player-agent",
    "powerpoint-agent",
    "preview-agent",
    "pytest>=8.3.5",
    "smolagents>=1.13.0",
    "textedit-agent",
    "weave>=0.51.42",
    "wechat-agent",
    "word-agent",
]

[tool.uv.sources]
word-agent = { git = "https://github.com/Computer-use-agents/Word-Agent.git" }
wechat-agent = { git = "https://github.com/Computer-use-agents/Wechat-Agent.git" }
calendar-agent = { git = "https://github.com/Computer-use-agents/Calendar-Agent.git" }
player-agent = { git = "https://github.com/Computer-use-agents/QuickTime-Agent.git" }
powerpoint-agent = { git = "https://github.com/Computer-use-agents/PowerPoint-Agent.git" }
excel-agent = { git = "https://github.com/Computer-use-agents/Excel-Agent.git" }
preview-agent = { git = "https://github.com/Computer-use-agents/Preview-Agent.git" }
browser-agent = { git = "https://github.com/Computer-use-agents/Browser-Agent.git" }
finder-agent = { git = "https://github.com/Computer-use-agents/Finder-Agent.git" }
textedit-agent = { git = "https://github.com/Computer-use-agents/TextEdit-Agent.git" }
